test-generator/tests/snapshots/tsx/test_generated_object.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
{ prop11: value110, prop21: value21 }

AST:
(program
  (expression_statement
    (object
      (pair
        key: (property_identifier "prop11")
        value: (identifier "value110")
      )
      (pair
        key: (property_identifier "prop21")
        value: (identifier "value21")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "prop11",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 3,
                end_line: 1,
                end_column: 9,
            },
        },
        Usage {
            name: "value110",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 19,
            },
        },
        Usage {
            name: "prop21",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 21,
                end_line: 1,
                end_column: 27,
            },
        },
        Usage {
            name: "value21",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 29,
                end_line: 1,
                end_column: 36,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
